--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: phone-finder
     runtime: docker
-    plan: starter # Persistent disk requires paid plan (Standard/Starter)
-    region: singapore # Asia Pacific (closest to India usually)
+    plan: free # Can use free plan now since no disk
+    region: singapore # Asia Pacific
     envVars:
       - key: APP_KEY
         generateValue: true
@@ -16,8 +16,6 @@ services:
       - key: DB_CONNECTION
         value: sqlite
       - key: DB_DATABASE
-        value: /var/lib/data/database.sqlite
-    disk:
-      name: sqlite-data
-      mountPath: /var/lib/data
-      sizeGB: 1
+        value: /var/www/html/database/database.sqlite
+      - key: LOG_CHANNEL
+        value: stderr
