chore: simplify keep-alive workflow

--- a/.github/workflows/keep_alive.yml
+++ b/.github/workflows/keep_alive.yml
@@ -2,41 +2,28 @@ name: Keep Render App Alive
 
 on:
   schedule:
+    # Runs every 14 minutes (safely under Render's 15-minute sleep timer)
     - cron: '*/14 * * * *'
-  workflow_dispatch:
+  workflow_dispatch: # Allows manual testing
 
 jobs:
-  keep-alive:
+  ping-server:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     
     steps:
-      - name: Ping with Retry Logic
+      - name: Ping Render App
         run: |
-          URL="https://phone-finder-shjs.onrender.com/"
-          MAX_RETRIES=3
-          RETRY_DELAY=10
+          echo "🔄 Pinging Render app at $(date -u)"
           
-          for i in $(seq 1 $MAX_RETRIES); do
-            echo "Attempt $i of $MAX_RETRIES"
-            
-            if curl -I --max-time 60 "$URL"; then
-              echo "✅ Successfully pinged server at $(date -u)"
-              exit 0
-            else
-              echo "⚠️ Failed, retrying in ${RETRY_DELAY}s..."
-              sleep $RETRY_DELAY
-            fi
-          done
+          # Send request and capture HTTP status code
+          response=$(curl -o /dev/null -s -w "%{http_code}" --max-time 60 https://phone-finder-shjs.onrender.com/)
           
-          echo "❌ All retry attempts failed"
-          exit 1
-
-  keepalive-workflow:
-    runs-on: ubuntu-latest
-    permissions:
-      actions: write
-      contents: write
-    steps:
-      - uses: actions/checkout@v4
-      - uses: gautamkrishnar/keepalive-workflow@v2
+          # Check if response is successful
+          if [ $response -eq 200 ] || [ $response -eq 301 ] || [ $response -eq 302 ]; then
+            echo "✅ Server is alive! (HTTP $response)"
+            exit 0
+          else
+            echo "⚠️ Unexpected status: HTTP $response"
+            exit 1
+          fi
