--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -4,6 +4,8 @@ beautifulsoup4>=4.12.0
 urllib3>=2.0.0
 lxml>=5.0.0
 cloudscraper>=1.2.71
+icrawler>=0.6.7
+duckduckgo-search>=6.0.0
 
 # Playwright (headless browser for JS-heavy pages)
 playwright>=1.44.0
