--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@alpinejs/collapse": "^3.15.8",
         "alpinejs": "^3.15.8",
-        "firebase": "^12.9.0"
+        "firebase": "^12.9.0",
+        "puppeteer": "^24.37.5"
     }
 }
